Add multi-version Paper build matrix and releases